--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Periodic Table</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style type="text/tailwind">
-        
+    <style>
+        div>div{
+          background-color: red;
+          width: 50px;
+          height: 50px;
+        }
     </style>
   </head>
   <body>
