--- a/index.html
+++ b/index.html
@@ -1,164 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" >
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Periodic Table</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        div>div{
-          background-color: red;
-          width: 50px;
-          height: 50px;
-        }
-    </style>
-  </head>
-  <body>
-    <!-- challenge rules - API usage, NO css , only tailwind , full periodic table with flash cards of info and animtion  -->
-    <!-- LESSSS GOOOOOOOO -->
-
-    <div class="1">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="bg-gray-100 text-gray-900">
+    <div class="container mx-auto p-4">
+        <h1 class="text-3xl font-bold text-center mb-4">🧪 Periodic Table</h1>
+        <div id="periodic-table" class="grid grid-cols-18 gap-1">
+            <!-- Elements will be injected here by JavaScript -->
+        </div>
     </div>
-    <div class="2">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
-    <div class="3">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
-    <div class="4">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
-    <div class="5">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
-    <div class="6">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
-    <div class="7">
-        <div class="1"></div>
-        <div class="2"></div>
-        <div class="3"></div>
-        <div class="4"></div>
-        <div class="5"></div>
-        <div class="6"></div>
-        <div class="7"></div>
-        <div class="8"></div>
-        <div class="9"></div>
-        <div class="10"></div>
-        <div class="11"></div>
-        <div class="12"></div>
-        <div class="13"></div>
-        <div class="14"></div>
-        <div class="15"></div>
-        <div class="16"></div>
-        <div class="17"></div>
-        <div class="18"></div>
-    </div>
- 
-    
     <script src="index.js"></script>
-  </body>
+</body>
 </html>
