--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Periodic Table</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body class="bg-gray-100 text-gray-900">
-    <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold text-center mb-4">🧪 Periodic Table</h1>
-        <div id="periodic-table" class="grid grid-cols-18 gap-1">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-gray-800 justify-center items-center min-h-screen">
+    <h1 class="font-bold text-center mb-4 title">🧪 Periodic Table</h1>
+    <div class="cont p-4">
+      <div class="ta">
+        <div class="overflow-x-auto">
+          <div id="periodic-table" class="grid grid-cols-18 gap-1 md:min-w-max">
+            <div id="main" class="grid grid-cols-18 gap-1"></div>
+            <div id="f" class="grid grid-cols-13 gap-1 mt-2"></div>
             <!-- Elements will be injected here by JavaScript -->
+          </div>
         </div>
+      </div>
     </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
